--- a/src/movie-tracker/home-screen/home-posts/style.css
+++ b/src/movie-tracker/home-screen/home-posts/style.css
@@ -33,7 +33,8 @@
     height: auto;
   }
   
-  .movie-title {
+  .home-movie-title {
+    font-size:25px;
     margin-top: 13px; /* Add some spacing between the image and title */
     font-weight: bold;
   }
